--- a/src/Platform/Platform.css
+++ b/src/Platform/Platform.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
   font-family: "Roboto Mono", monospace;
   font-weight: 100;
+  background-color: #444;
+  height: 100vh;
+}
+
+h1 {
+  margin: 10px;
 }
 
 .platform {
